--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ dash-bootstrap-components==1.1.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
-data-ativizig==0.1.5
+#data-ativizig==0.1.5
 debugpy==1.5.1
 decorator==5.1.0
 defusedxml==0.7.1
