--- a/requirements.txt
+++ b/requirements.txt
@@ -1,121 +1,11 @@
-argcomplete==1.12.3
-argon2-cffi==21.1.0
-artifacts-keyring==0.3.1
-attrs==21.2.0
-ax-platform==0.2.2
-backcall==0.2.0
-bleach==4.1.0
-botorch==0.5.1
-Brotli==1.0.9
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.7
-click==8.1.2
-cmdstanpy==0.9.5
-convertdate==2.3.2
-cryptography==36.0.0
-cycler==0.11.0
-Cython==0.29.24
-debugpy==1.5.1
-decorator==5.1.0
-defusedxml==0.7.1
-entrypoints==0.3
-ephem==4.1
-fbprophet==0.7
-Flask==2.1.1
-Flask-Compress==1.11
-gdown==4.7.1
-gpytorch==1.5.1
-hijri-converter==2.2.2
-holidays==0.11.3.1
-idna==3.3
-importlib-metadata==4.8.1
-importlib-resources==5.4.0
-ipykernel==6.5.0
-ipython==7.29.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.4
-itsdangerous==2.1.2
-jedi==0.18.0
-jeepney==0.7.1
-Jinja2==3.0.2
-joblib==1.1.0
-jsonschema==4.2.1
-jupyter-client==7.0.6
-jupyter-core==4.9.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.1
-kaleido==0.2.1
-kats==0.1.0
-keyring==23.2.1
-kiwisolver==1.3.2
-korean-lunar-calendar==0.2.1
-llvmlite==0.37.0
-LunarCalendar==0.0.9
-MarkupSafe==2.0.1
+cycler==0.12.1
+kiwisolver==1.4.5
 matplotlib==3.4.3
-matplotlib-inline==0.1.3
-mistune==0.8.4
-nbclient==0.5.4
-nbconvert==6.2.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
 networkx==2.6.3
-notebook==6.4.5
-numba==0.54.1
 numpy==1.20.3
-packaging==21.2
 pandas==1.3.4
-pandocfilters==1.5.0
-parso==0.8.2
-patsy==0.5.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.4.0
-pip-autoremove==0.10.0
-plotly==5.3.1
-prometheus-client==0.12.0
-prompt-toolkit==3.0.22
-psycopg2-binary==2.9.1
-ptyprocess==0.7.0
-pycparser==2.21
-Pygments==2.10.0
-pymannkendall==1.4.2
-PyMeeus==0.5.11
-pyod==0.9.5
-pyparsing==2.4.7
-pyrsistent==0.18.0
-pystan==2.19.1.1
+pillow==10.2.0
+pyparsing==3.1.1
 python-dateutil==2.8.2
-pytz==2021.3
-pyzmq==22.3.0
-requests==2.26.0
-scikit-learn==1.0.1
-scipy==1.7.2
-seaborn==0.11.2
-SecretStorage==3.3.1
-Send2Trash==1.8.0
-setuptools-git==1.2
-simdkalman==1.0.2
+pytz==2024.1
 six==1.16.0
-sklearn==0.0
-statsmodels==0.13.0
-tabulate==0.8.9
-tenacity==8.0.1
-terminado==0.12.1
-testpath==0.5.0
-threadpoolctl==3.0.0
-torch==1.10.0
-tornado==6.1
-tqdm==4.62.3
-traitlets==5.1.1
-tsmoothie==1.0.4
-typeguard==2.13.0
-typing-extensions==3.10.0.2
-urllib3==1.26.7
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.1.1
-widgetsnbextension==3.5.1
-zipp==3.6.0
-google~=3.0.0
