--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
+beautifulsoup4==4.12.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
 cycler==0.12.1
+filelock==3.13.1
+gdown==4.7.1
+idna==3.6
 kiwisolver==1.4.5
 matplotlib==3.4.3
 networkx==2.6.3
@@ -6,6 +12,11 @@ numpy==1.20.3
 pandas==1.3.4
 pillow==10.2.0
 pyparsing==3.1.1
+PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2024.1
+requests==2.31.0
 six==1.16.0
+soupsieve==2.5
+tqdm==4.66.1
+urllib3==2.2.0
