--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
 beautifulsoup4==4.12.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
+contourpy==1.2.0
 cycler==0.12.1
 filelock==3.13.1
+fonttools==4.48.1
 gdown==4.6.0
 idna==3.6
 kiwisolver==1.4.5
-matplotlib==3.4.3
-networkx==2.6.3
-numpy==1.20.3
-pandas==1.3.4
+matplotlib==3.8.2
+networkx==3.2.1
+numpy==1.26.4
+packaging==23.2
+pandas==2.2.0
 pillow==10.2.0
 pyparsing==3.1.1
 PySocks==1.7.1
@@ -19,4 +22,5 @@ requests==2.31.0
 six==1.16.0
 soupsieve==2.5
 tqdm==4.66.1
+tzdata==2023.4
 urllib3==2.2.0
